--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "require": {
         "php": ">7.0",
         "ext-json": "^1.4",
-        "ext-yaml": "^2.0"
+        "ext-yaml": "^2.0",
+        "symfony/console": "^3.3"
     },
     "autoload": {
         "psr-4": {
@@ -12,6 +13,9 @@
         }
     },
     "license": "MIT",
+    "bin": [
+        "bin/apispecgen"
+    ],
     "authors": [
         {
             "name": "Turenar",
