--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
         "php": ">= 7.1",
         "ext-json": "^1.4",
         "ext-yaml": "^2.0",
-        "symfony/console": "^3.3"
+        "symfony/console": ">= 3.3"
     },
     "require-dev": {
         "phpunit/phpunit": ">= 5.4.0",
-        "justinrainbow/json-schema": "^5.2"
+        "justinrainbow/json-schema": ">= 5.2"
     },
     "autoload": {
         "psr-4": {
