--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,6 @@ version: 2
 
 jobs:
   build:
-    environment:
-      CC_TEST_REPORTER_ID: ca0bae664bbecc0272e3aaca7aae888d85b01b31669ce72e5ff3467dd2de3cac
     docker:
     - image: circleci/php:7.1-cli-node
     steps:
@@ -38,5 +36,7 @@ jobs:
         name: Run tests
         command: |
           ./cc-test-reporter before-build
-          sudo vendor/bin/phpunit --coverage-clover clover.xml
+          sudo vendor/bin/phpunit --coverage-clover clover.xml --coverage-xml coverage.xml.dir
           ./cc-test-reporter after-build --coverage-input-type clover --exit-code $?
+    - store_test_results:
+        path: coverage.xml.dir
