--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
         name: Run tests
         command: |
           ./cc-test-reporter before-build
-          sudo vendor/bin/phpunit --coverage-clover clover.xml --coverage-xml coverage.xml.dir
+          sudo vendor/bin/phpunit --coverage-clover clover.xml --log-junit test-result/default/result.xml
           ./cc-test-reporter after-build --coverage-input-type clover --exit-code $?
     - store_test_results:
-        path: coverage.xml.dir
+        path: test-result
